[MSE] WebKit may lose text samples after removal of video ranges https://bugs.webkit.org/show_bug.cgi?id=287709 rdar://145301735

Reviewed by NOBODY (OOPS!).

Don't purge cues based on timeline buffered ranges for MSE tracks.

* Source/WebCore/Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveInitializationSegment):
* Source/WebCore/html/track/InbandDataTextTrack.h:
* Source/WebCore/html/track/InbandGenericTextTrack.h:
* Source/WebCore/html/track/InbandTextTrack.cpp:
(WebCore::InbandTextTrack::InbandTextTrack):
* Source/WebCore/html/track/InbandWebVTTTextTrack.h:
* Source/WebCore/html/track/TextTrack.h:
(WebCore::TextTrack::shouldPurgeCuesFromUnbufferedRanges const):
(WebCore::TextTrack::setShouldPurgeCuesFromUnbufferedRanges):