Source/WebCore/html/track/InbandDataTextTrack.h
@@ -45,8 +45,6 @@ private:
 
     void addDataCue(const MediaTime& start, const MediaTime& end, std::span<const uint8_t>) final;
 
-    bool shouldPurgeCuesFromUnbufferedRanges() const final { return true; }
-
 #if !RELEASE_LOG_DISABLED
     ASCIILiteral logClassName() const final { return "DataCue"_s; }
 #endif
